--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,14 @@
 			<version>r05</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
